<resources>
    <string name="app_name">Don\'t Touch My Phone</string>
    <string name="anti_theft_alarm_app">Anti Theft Alarm App</string>
    <string name="anti_theft_alarm">Anti Theft\nAlarm</string>
    <string name="wifi_detection">Wifi Detection</string>
    <string name="earphones_detections">Earphones Detections</string>
    <string name="don_t_touch_my_phone">Don\'t Touch My Phone</string>
    <string name="intruder_alert">Intruder Alert</string>
    <string name="charging_detection">Charging Detection</string>
    <string name="anti_pocket_detection">Anti Pocket Detection</string>
    <string name="open">open\n</string>
    <string name="close">close</string>
    <string name="settings">\nsettings</string>
    <string name="securekeep">SecureKeep</string>
    <string name="capture_intruder_s_photo_upon_unathorize_unclock_attempt">Capture Intruder\'s photo upon unauthorized unlock attempt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">back</string>
    <string name="avoid_over_charge">Avoid over Charge</string>
    <string name="flash">flash</string>
    <string name="switchbtn">switchBtn</string>
    <string name="flash_light">Flash Light</string>
    <string name="on_flash_while_ringing">on flash while ringing</string>
    <string name="vibrate">vibrate</string>
    <string name="vibrate_while_ringing">vibrate while ringing</string>
    <string name="ringtone_1">ringtone 1</string>
    <string name="bulgur_alarm">bulgur alarm</string>
    <string name="enter_master_pin">Enter Master Pin</string>
    <string name="tap_to_activate">Tap to Activate</string>
    <string name="for_best_results_always_turn_on_vibration_when_you_are_in_crowded_areas_and_also_turn_on_flash_at_night">For best results always turn on vibration when you are in crowded areas and also turn on flash at night</string>
    <string name="pin_attempt_setting">Pin Attempt Setting</string>
    <string name="auto_photo_on_the_count_of_attempts">Auto-photo on the count of attempts</string>
    <string name="wrong_pin_attempts">Wrong pin attempts</string>
    <string name="none">None</string>
    <string name="view_all">View all</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="adjust_sound">Adjust Sound</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="settings2">Settings</string>
    <string name="motion_alarm_sensitivity">Motion Alarm Sensitivity</string>
    <string name="adjust_senstivity_for_motion_detection">Adjust sensitivity for motion detection</string>
    <string name="adjust_sensitivity_for_motion_detection">Adjust sensitivity for motion detection</string>
    <string name="set_alarm_tone">Set Alarm Tone</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="please_connect_charger">Please Connect Charger</string>
    <string name="please_connect_earphones">Please Connect Earphones</string>
    <string name="_2024_08_03_09_46_pm">2024/08/03 09:46 PM</string>
    <string name="tap_to_deactivate">Tap to Deactivate</string>
    <string name="tone_1">Tone 1</string>
    <string name="tone_2">Tone 2</string>
    <string name="tone_3">Tone 3</string>
    <string name="tone_4">Tone 4</string>
    <string name="tone_5">Tone 5</string>
    <string name="tone_name">Tone Name</string>
    <string name="system_tones">System Tones</string>
    <string name="create_4_digit_pin">Create 4 Digit Pin</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="staric">****</string>
    <string name="current_pin_code">Current Pin Code</string>
    <string name="error_cannot_write">Cannot write image captured by camera.</string>
    <string name="error_cannot_open">Cannot open camera.</string>
    <string name="error_cannot_get_permission">Camera permission not available.</string>
    <string name="error_not_having_camera">Your device does not have front camera.</string>
    <string name="error_camera_permission_denied">Camera permission denied.</string>
    <string name="let_s_get_start">Let\'s Get Start</string>
    <string name="about">About</string>
    <string name="unintall">Unintall</string>
    <string name="uninstall">Uninstall</string>
    <string name="how_to_uninstall">How to Uninstall</string>
    <string name="version">Version</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="about_securekeep">About SecureKeep</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="linkedin">LinkedIn</string>
    <string name="refresh">Refresh</string>
    <string name="get_intruder_by_email">Get Intruder by Email</string>
    <string name="sends_intruder_picture_by_email">Sends intruder picture by email</string>
    <string name="set_email_account">Set Email Account</string>
    <string name="email_account">Email Account</string>
    <string name="abc_123_com">abc@123.com</string>
    <string name="current_email_account">Current Email Account</string>
    <string name="add_email_account">Add Email Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_account">Enter Email Account</string>
    <string name="save">Save</string>
    <string name="update_email_account">Update Email Account</string>
    <string name="_00_00">00:00</string>
    <string name="settings_">Settings</string>
    <string name="apply">Apply</string>
    <string name="about_secure_keep">About Secure Keep</string>
    <string name="some_permissions_are_required_for_this_feature">Some Permissions are required for this feature</string>
</resources>