<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".earphonedetection.EarphonesActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:background="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:padding="@dimen/_16sdp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/activityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/charging_detection"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settingBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:padding="@dimen/_16sdp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/setting"
            app:tint="@color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/activate"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="@dimen/_30sdp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/powerBtn"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/charger" />

            <TextView
                android:id="@+id/activateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/please_connect_charger"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/powerBtn"
                app:layout_constraintStart_toStartOf="@+id/powerBtn"
                app:layout_constraintTop_toBottomOf="@+id/powerBtn" />

            <TextView
                android:id="@+id/activateCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/activateText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activate">

        <androidx.cardview.widget.CardView
            android:id="@+id/flashCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            android:backgroundTint="@color/teal_turquoise"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/teal_turquoise"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/flashBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/flash"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/flash" />

                <ImageButton
                    android:id="@+id/switchBtnF"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/switchbtn"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/switch_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@color/teal_turquoise"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/flash_light"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/on_flash_while_ringing"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/vibrateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:backgroundTint="@color/teal_turquoise"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/teal_turquoise"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/vibrateBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/vibrate"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/vibrate" />

                <ImageButton
                    android:id="@+id/switchBtnV"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/switchbtn"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/switch_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@color/teal_turquoise"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/vibrate"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/vibrate_while_ringing"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        android:background="@drawable/yellow_round_boarder">


        <ImageView
            android:id="@+id/idea"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/idea"
            app:tint="@color/white"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="8dp"
            android:text="@string/for_best_results_always_turn_on_vibration_when_you_are_in_crowded_areas_and_also_turn_on_flash_at_night" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>